@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T16:16:47Z",
-  "count" : 11,
-  "count_minmax" : [ 10, 11 ],
-  "count_decinc" : [ -0, +11 ],
-  "uniques" : 8,
-  "uniques_minmax" : [ 7, 8 ],
-  "uniques_decinc" : [ -0, +8 ]
+  "timestamp" : "2022-05-21T00:53:20Z",
+  "count" : 14,
+  "count_minmax" : [ 10, 14 ],
+  "count_decinc" : [ -0, +14 ],
+  "uniques" : 10,
+  "uniques_minmax" : [ 7, 10 ],
+  "uniques_decinc" : [ -0, +10 ]
 }
