@@ -1,6 +1,6 @@
 {
-  "count": 53,
-  "uniques": 18,
+  "count": 56,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 11,
-      "uniques": 8
+      "count": 14,
+      "uniques": 10
     }
   ]
 }
